@@ -5,3 +5,8 @@ aaabbbb
 a0b
 aa0aaa
 b0aaa
+=>(\d{1,3}\.){3}\d{1,3}
+1.2.3.4
+1.22.333.44
+1.2.3
+1..2.3
